hard-gists/4093759/run.log
=== Docker Run Log for 4093759 ===
Started at: Mi 29. Okt 14:21:22 CET 2025

[2025-10-29 14:21:23] START: Running container for 4093759
[2025-10-29 14:21:23] SUCCESS: Container b97b817443ec6e024353e6181810326eedb4ebe6f55723e4360848039c89932f started for 4093759
=== Container logs for 4093759 ===
  File "/snippet.py", line 43
    print "Create %s" %(parentFolder)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4093759 ===
[2025-10-29 14:21:25] INFO: Container b97b817443ec6e024353e6181810326eedb4ebe6f55723e4360848039c89932f has stopped
